--- a/tarea m2u1 css (parte 1)/estilos.css
+++ b/tarea m2u1 css (parte 1)/estilos.css
@@ -3,49 +3,61 @@
     margin: 0;
 }
 header {
-    background-color: lightpink;    
+    background: linear-gradient(to bottom, lightpink, seashell 40%);
 }
 h1 {
-    color: seashell;
+    color: black;
     font-family: 'The Nautigal', cursive;
     font-size: 10rem;
 }
 img {
     border-radius: 50%;
-    float: right;
+    float: left;
     height: 200px;
     padding: 3% 5%;
 }
 main {
-    background-color: lightyellow;
-    padding: 0% 5% 5%;
+    background-color: seashell;
+    padding: 0% 10% 5%;
 }
 section {
     padding-top: 3%;
-    text-align: justify;    
+    text-align: justify;
+    border-radius: 5px;    
+}
+#perfil {
+    column-count: 2;
+    column-gap: 4%;
 }
 footer {
-    background-color: lightpink;
+    background: linear-gradient(to top, lightpink, seashell);
     padding: 25px;
     text-align: center;    
 }
 a {
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(120,40,140, 0.75);
     text-decoration: none;
 }
 a:hover {
-    color: black;
+    color: rgba(0, 0, 0, 0.75);
     text-decoration: underline;
 }
+
+
 form {
-    background-color: lightpink;
+    background: linear-gradient(lightpink, seashell 10% 90%, lightpink);
+    padding: 10%;
 }
 .datos {
     margin: 1%;
+    padding: 0.75%;
     background-color: lightyellow;
+    box-shadow: 0 0 5px #888;
+    border: none;
+    border-radius: 4px;
 }
 #enviar:hover {
-    background-color: lightgreen;
+    background-color: lightseagreen; 
 }
 #borrar:hover {
     background-color: lightcoral;
